fix: higher contrast on image (i)

--- a/_sass/theme/_features.sass
+++ b/_sass/theme/_features.sass
@@ -45,7 +45,7 @@ $card-double-size: ($card-width * 2 + $card-gap * 2)
     color: inherit
     text-decoration: underline
   .feature-img-license-c
-    color: rgba(0,0,0,.5)
+    color: rgba(0,0,0,.9)
     .icon
       width: 1rem
       height: 1rem
